# neosocksd

./: .clang-format  .clang-tidy  .gitignore  API.md  CMakeLists.txt  LICENSE  README.md  agent.lua  auth.lua  gcov.py  lb.lua  libruleset.lua  m.sh  neosocksd.lua  neox.sh  ruleset.lua  ruleset_simple.lua  simple_ruleset.lua  stub.lua
.github/workflows/: build.yml  lint.yml  linter.yml
agents/: clarify.agent.md
contrib/: CMakeLists.txt
contrib/csnippets/: CMakeLists.txt  config.h.in
contrib/csnippets/binary/: CMakeLists.txt  serialize.h
contrib/csnippets/codec/: CMakeLists.txt  base64.c  base64.h
contrib/csnippets/io/: CMakeLists.txt  file.c  file.h  io.h  memory.c  memory.h  stream.c  stream.h
contrib/csnippets/math/: intlog2.c  intlog2.h  rand.c
contrib/csnippets/meta/: CMakeLists.txt  arraysize.h  class.h  intcast.h  minmax.h
contrib/csnippets/net/: CMakeLists.txt  addr.c  addr.h  http.c  http.h  mime.c  mime.h  url.c  url.h
contrib/csnippets/os/: clock.h  daemon.c  daemon.h  signal.c  signal.h  socket.c  socket.h
contrib/csnippets/sync/: CMakeLists.txt  dispatcher.c  dispatcher.h  task.h
contrib/csnippets/utils/: CMakeLists.txt  ascii.h  buffer.c  buffer.h  check.h  class.h  debug.c  debug.h  formats.c  formats.h  gc.c  gc.h  intcast.h  mcache.h  object.h  slog.c  slog.h  testing.c  testing.h
contrib/miniz/: CMakeLists.txt
example/: auth.lua  config.lua  gen_biglist.lua  lb.lua  ruleset.lua  ruleset_egress.lua  ruleset_ingress.lua  ruleset_simple.lua
examples/: gen_biglist.lua  ruleset.lua
scripts/: bench.py  codesize.py  format.py  gcov.py  gprof.py  lint.py  smoke_test.py
src/: CMakeLists.txt  api_client.c  api_client.h  api_client_test.c  api_server.c  api_server.h  api_server_test.c  codec.c  codec.h  codec_test.c  conf.c  conf.h  conf_test.c  config.h.in  dialer.c  dialer.h  dialer_test.c  forward.c  forward.h  forward_test.c  fuzz_test.c  http.c  http.h  http_api.c  http_client.c  http_client.h  http_client_test.c  http_impl.h  http_invoke.c  http_parser.c  http_parser.h  http_proxy.c  http_proxy.h  http_proxy_test.c  http_server.c  http_server.h  httputil.c  httputil.h  httputil_test.c  main.c  (+26 more)
src/codec/: CMakeLists.txt  codec.c
src/proto/: CMakeLists.txt  codec.c  codec.h  codec_test.c  domain.h  http.c  http.h  http_test.c  socks.h
src/ruleset/: CMakeLists.txt  api.c  api.h  api_test.c  await.c  await.h  await_test.c  base.c  base.h  base_test.c  cfunc.c  cfunc.h  cfunc_test.c  compat.h  internal.c  internal.h  marshal.c  marshal.h  marshal_test.c  regex.c  regex.h  regex_test.c  ruleset.c  ruleset.h  ruleset_test.c  time.c  time.h  time_test.c  zlib.c  zlib.h  zlib_test.c
tests/: boot.lua  main.lua  ruleset.lua  run.sh  test_agent.lua  test_api.lua  test_async.lua  test_codec.lua  test_forward.lua  test_libruleset.lua  test_regex.lua  test_rpc.lua  testlib.lua
